--- a/lab_01/lab_01.rmd
+++ b/lab_01/lab_01.rmd
@@ -47,7 +47,7 @@ wv_ppp_loans <- read_rds("lab_01.rds")
 
 **Task** Run the codeblock below to use glimpse to get a sense of the column names, types and sample data.
 **Q1** How many rows and columns does this dataframe have?
-**A1** [write your answer here]
+**A1** 33,336 obs. of 58 variables
 
 ```{r}
 glimpse(wv_ppp_loans)
@@ -58,33 +58,43 @@ glimpse(wv_ppp_loans)
 Use the pre-lab and your reference notebook as examples.
 
 **Q2** Which West Virginia county got the most loans? How many?
-**A2** [write your answer here]
+**A2** Kanawha, 4,273
 
 ```{r}
-# Write the code to produce your answer here
-
+wv_ppp_loans %>%
+  group_by(project_county_name) %>%
+  summarize(
+    count_loans = n()
+  ) %>%
+  arrange(desc(count_loans))
 ```
 **Q3** Which West Virginia county got the fewest loans? How many?
-**A3** [write your answer here]
+**A3** Palm Beach, 2 
 
 ```{r}
-# Write the code to produce your answer here
+wv_ppp_loans %>%
+  group_by(project_county_name) %>%
+  summarize(
+    count_loans = n()
+  ) %>%
+  arrange(desc(count_loans))
 
 ```
 **Q4** What's your best educated guess to explain why the county identified in question 2 had a lot of loans and why the county identified in question 3 had only a few loans? Hint: you won't find the answer in the data, you'll need to do some quick web research. You do not need to write any code for this question, so no codeblock is provided.  
-**A4** [write your answer here]
+**A4** Kanawha County is the state's most populous county. Therefore, of the total number of people who applied for loans, most of them are likely to be from Kanawha County. 
 
 
 **Q5** What West Virginia business got the state's largest PPP loan? How much was it for? What does the business do? How many jobs did the loan retain, according to the data?
-**A5** [write your answer here]
+**A5** Greenbriar Hotel Corporation; 8,912,202.0; hotel corporation; 500
 
 ```{r}
-# Write the code to produce your answer here
+wv_ppp_loans %>%
+  arrange(desc(amount))
 
 ```
 
 **Q6** What West Virginia politician (with his family) owns the company identified in question 5? What's your source for that information? Hint: this will require web research, you won't be able to answer this purely from the data set.  You do not need to write any code for this question, so no codeblock is provided.  
-**A6** [write your answer here]
+**A6** Gov. Jim Justice also known as "Big Jim." Source: https://www.propublica.org/article/west-virginia-greenbrier-governor-jim-justice-little-trump 
 
 **Q7**. Produce a summary table that has the following information for West Virginia as a whole (the whole state, not by county):
 * count of loans
@@ -96,7 +106,19 @@ Use the pre-lab and your reference notebook as examples.
 
 Store it as a variable object called `wv_summary` so that you can examine it with the data viewer. What newsworthy nuggets jump out at you that you could imagine dropping into a news story? Write a few summary sentences with overall findings.
 
-**A7** [write your answer here]
+**A7** The county with the most loan application was Kanahwa (4,273).The county with the largest total loan amount was Kanahwa (419,264,708). The county with the largest mean loan amount was Palm Beach (759,850). The county with the largest median loan amount was Palm Beach (759,850). The county with the largest minimum loan amount was Palm Beach (625,600). The county with the largest maximum loan amount was Greenbrier (8,912,202).
+
+Newsworthy nuggets I'd include in the story include Palm Beach County's high loan amount average and minimum loan amount. I would also highlight how Greenbrier has the largest maximum loan amount and largest total amount of loans and look into what role Greenbrier Hotel Corporation -and its ownership- played in this. 
 ```{r}
-# Write the code to produce your answer here
+wv_summary <- wv_ppp_loans %>%
+  group_by(project_county_name) %>%
+  summarise(
+    count_loans = n(),
+    total_loans_amount = sum(amount),
+    mean_loan_amount = mean(amount),
+    median_loan_amount = median(amount),
+    min_loan_amount = min(amount),
+    max_loan_amount = max(amount)
+  ) %>%
+  arrange(desc(max_loan_amount))
 ```
