--- a/class_reference.rmd
+++ b/class_reference.rmd
@@ -38,7 +38,12 @@ How to find columns where the value is NOT NA-- filter(!is.na(column_name)) %>%
 Standardize means to make a data set uniform e.g. make city names in "city" column all uppercase. 
 str_detect(city,"^Anld") is a code that commands the program to detect situations where "Anld" exists in the data. 
 Mutate is used to create a new variable. 
-Order- ascending.... desc- descending
+Order- ascending....desc- descending
+
+##Things I learned on Feb. 15, 2022
+"bind_rows" stacks data from different data sets into one dataframe. The data is similar but not identical, fyi. bind_rows only works when the column names are *identical*.
+*"Error in join_rows(x_key, y_key, type = type, na_equal = na_equal)"* This means that the columns have a type mismatch- one column is a character column while a nother is a number column. 
+
 
 ```{r}
 setwd("~/Documents/GitHub/data_journalism_2022_spring")
